2015-09-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix hang on failure.

2015-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_comm_dispatch.c: Send all LOG_MESSAGE
	* ndmp-src/ndmjob_main_util.c: Quote LOG_MESSAGE
	* perl/Amanda/Report/human.pm: Fix output

2015-09-01  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/bin/app-dancer2.pl.in: Correctly load multiple
	  applications.
	* server-src/amanda-rest-server.pl: Always load the same Dancer2
	  script.

2015-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* patching file perl/Amanda/FetchDump.pm: Fix perl warning
	* patching file server-src/amcheck-device.pl: Fix
	* installcheck/Amanda_Rest_Amcheck.pl: Fix

2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): More improvement.

2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve message.

2015-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Fix compratio parsing.

2015-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Add the check_host_setting count in the
	  remote_errros when doing only the client check

2015-08-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Default GNUTAR to /usr/bin/tar, STAR to
	  /usr/bin/star, BSDTAR to /usr/bin/bsdtar, SUNTAR to /usr/sbin/tar,
	  SAMBA_CLIENT to /usr/bin/smbclient.
	* config/amanda/progs.m4: Default SSH to /usr/bin/ssh
	* config/amanda/ssh-security.m4: Use AMANDA_PROG_SSH

2015-08-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): Fix to not send
	  TAPE_ACTION_START_A_FLUSH if we can't guarantee a tape
	* server-src/driverio.h (struct taper_s): Add sent_first_write

2015-08-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_allow_take_scribe_from): New function
	  to return the allow_take_scribe_from setting